--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -15,7 +15,7 @@
  */
 body {
   font-family: 'Lato', sans-serif;
-  background-image: url('../images/BG.png');
+  background-image: url('../images/BGResize2.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
